--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,4 +30,4 @@ jobs:
           context: .
           push: true
           # 这里已手动修正为全小写
-          tags: ghcr.io/losy-mify/vnc:latest
+          tags: ghcr.io/baipiaofree/vnc:latest
